--- a/templates/Government.html
+++ b/templates/Government.html
@@ -17,6 +17,7 @@
     <div style="background: #212121; padding: 10px 0; box-shadow: 3px 3px 5px 0 rgba(0,0,0,.3); clear: both; text-align:center; position: relative; z-index:1;"><a href="http://windows.microsoft.com/en-US/internet-explorer/"><img src={%static "images/ie8-panel/warning_bar_0000_us.jpg"%} border="0" height="42" width="820" alt="You are using an outdated browser. For a faster, safer browsing experience, upgrade for free today."></a></div>
     <script src={%static "js/html5shiv.min.js"%}></script>
     <![endif]-->
+	<script src="https://apps.bdimg.com/libs/jquery/3.6.0/jquery.min.js"></script>
 	<script>
 	
 	<!-- 刷新页面、翻页用TODO -->
@@ -409,21 +410,21 @@ function loadXMLDoc2(formtype,obj_id)
 						<!-- Bootstrap Pagination -->
 						  <nav class="page-navigation" aria-label="Page navigation">
 							<ul class="pagination">
-								{% if page.has_previous %}  
-									<li class="page-item"><a class="page-link" href="{%url 'main:gov'%}/?page2={{page.previous_page_number}}" aria-label="Previous">
+								{% if page2.has_previous %}  
+									<li class="page-item"><a class="page-link" href="{%url 'main:gov'%}/?page2={{page2.previous_page_number}}" aria-label="Previous">
 										<span aria-hidden="true">&laquo;</span></a></li>
 								{% endif %}
 
-								{% for num in page.paginator.page_range%} 
-									{%if pindex == page.number%}
+								{% for num in page2.paginator2.page_range%} 
+									{%if pindex == page2.number%}
 										<li class="page-item active"><span class="page-link">{{ num }}</span></li>
 									{%else%}
 										<li class="page-item"><a class="page-link" href="{%url 'main:gov'%}/?page2={{num}}">{{ num }}</a></li>
 									{%endif%}
 								{% endfor %}
 
-								{% if page.has_next %}  
-									<li class="page-item"><a class="page-link" href="{%url 'main:gov'%}/?page2={{page.next_page_number}}" aria-label="Next">
+								{% if page2.has_next %}  
+									<li class="page-item"><a class="page-link" href="{%url 'main:gov'%}/?page2={{page2.next_page_number}}" aria-label="Next">
 										<span aria-hidden="true">&raquo;</span></a></li>
 								{% endif %}
 							</ul>
