--- a/templates/Thirdparty.html
+++ b/templates/Thirdparty.html
@@ -292,8 +292,10 @@ function loadXMLDoc3(obj_id)
 										  <input class="form-input" id="formId" type="number" name="formId" data-constraints="@Required">
 										  <label class="form-label" for="formId">{{item.6}}</label>
 										</div> -->
-										<textarea rows="2" cols="100" name="report-content" form="report"  placeholder="请输入报告内容...">321</textarea>
-										<input type="submit" class="button button-secondary" name="提交报告" value={{item.6}}>
+										<input class="form-input" id="hidden" type="hidden" name="formId" value="{{item.6}}">
+										
+										<textarea rows="2" cols="100" name="report-content" form="report"  placeholder="请输入报告内容..."></textarea>
+										<input type="submit" class="button button-secondary" name="submit" value="提交报告">
 							  </form>
 								
 							  <br>
@@ -323,6 +325,8 @@ function loadXMLDoc3(obj_id)
 												<input type="radio" name="expert-type" value="B类" />
 												C类
 												<input type="radio" name="expert-type" value="C类" />
+												
+												
 											
 												<input type="submit" class="button button-secondary" name="submit" value="提交抽审订单"/>
 									</form>
@@ -526,7 +530,7 @@ function loadXMLDoc3(obj_id)
 									<p>订单执行百分比</p><span class="progress-value">33</span>
 								{%elif item.7 == 0%}
 									<p>订单执行百分比</p><span class="progress-value">66</span>
-									<p>接单用户：{{item.11}}</p>
+									<p>接单用户：{{item.9}}</p>
 								{%elif item.5 == 1 and item.6 == 1 and item.7 == 1%}
 									<p>订单执行百分比</p><span class="progress-value">100</span>
 									<p>接单用户：{{item.9}}</p>
