--- a/templates/Thirdparty.html
+++ b/templates/Thirdparty.html
@@ -261,7 +261,7 @@ function loadXMLDoc3(obj_id)
 						  
 						  {% if item.12 == 1 %}
 						  <h5>{{item.6}}号集采订单</h5>
-						  <p>省份：{{item.0}}，城市：{{item.1}}，县：{{item.2}}，订单数量：{{item.3}}，期限：{{item.4}}，谈判时间：{{item.5}}</p> 
+						  <p>省份：{{item.0}}，城市：{{item.1}}，县：{{item.2}}，订单数量：{{item.3}}，期限：{{item.4}}，谈判时间：{{item.5}}，抽审比例：{{item.13}}</p> 
 							<!-- Linear progress bar-->
 							<div class="progress-linear-wrap">
 							<article class="progress-linear">
@@ -383,7 +383,7 @@ function loadXMLDoc3(obj_id)
 						  
 						  {% if item.12 == 1 %}
 						  <h5>{{item.6}}号集采订单</h5>
-						  <p>省份：{{item.0}}，城市：{{item.1}}，县：{{item.2}}，订单数量：{{item.3}}，期限：{{item.4}}，谈判时间：{{item.5}}</p> 
+						  <p>省份：{{item.0}}，城市：{{item.1}}，县：{{item.2}}，订单数量：{{item.3}}，期限：{{item.4}}，谈判时间：{{item.5}}，抽审比例：{{item.13}}</p> 
 							<!-- Linear progress bar-->
 							<div class="progress-linear-wrap">
 							<article class="progress-linear">
@@ -454,7 +454,7 @@ function loadXMLDoc3(obj_id)
 						  
 						  {% if item.12 == 1 %}
 						  <h5>{{item.6}}号集采订单</h5>
-						  <p>省份：{{item.0}}，城市：{{item.1}}，县：{{item.2}}，订单数量：{{item.3}}，期限：{{item.4}}，谈判时间：{{item.5}}</p> 
+						  <p>省份：{{item.0}}，城市：{{item.1}}，县：{{item.2}}，订单数量：{{item.3}}，期限：{{item.4}}，谈判时间：{{item.5}}，抽审比例：{{item.13}}</p> 
 							<!-- Linear progress bar-->
 							<div class="progress-linear-wrap">
 							<article class="progress-linear">
