--- a/templates/Government.html
+++ b/templates/Government.html
@@ -331,6 +331,11 @@ function loadXMLDoc2(formtype,obj_id)
 									  <input class="form-input" id="jicai-negotiate" type="date" name="jicai-negotiate" data-constraints="@Required">
 									  <label class="form-label" for="jicai-negotiate"></label>
 									</div>
+									<a>抽审比例</a>
+									<div class="form-wrap">
+									  <input class="form-input" id="jicai-per" type="text" name="jicai-per" data-constraints="@Required" value="100">
+									  <label class="form-label" for="jicai-per">%</label>
+									</div>
 								
 									<input type="submit" class="button button-secondary" name="submit" value="提交集采订单"">
 						</form>
@@ -379,7 +384,7 @@ function loadXMLDoc2(formtype,obj_id)
 						  
 						  {% if item.12 == 1 %}
 						  <h5>{{item.6}}号集采订单</h5>
-						  <p>省份：{{item.0}}，城市：{{item.1}}，县：{{item.2}}，订单数量：{{item.3}}，期限：{{item.4}}，谈判时间：{{item.5}}</p> 
+						  <p>省份：{{item.0}}，城市：{{item.1}}，县：{{item.2}}，订单数量：{{item.3}}，期限：{{item.4}}，谈判时间：{{item.5}}，抽审比例：{{item.13}}</p> 
 							<!-- Linear progress bar-->
 							<div class="progress-linear-wrap">
 							<article class="progress-linear">
